
02/02/2005 - Alin Sinpalean
 o Applied patch [1110911] Encryption request causes conn reset, submitted by
   Mike Hutchinson. SSL negotiation has been implemented to handle the encrypt
   only login case.
 o Applied a modified version of patch [1107090] Revised query timeout logic,
   submitted by Mike. Timeouts should now have millisecond precision, using a
   single timer thread per VM.
 o Fixed bug [1113040] Small bug in net.sourceforge.jtds.jdbcx.PooledConnection
   Thanks go to Marcus Nylander for finding the bug and providing a fix.

02/01/2005 - Alin Sinpalean
 o Updated FAQ to include information about local named pipes.
 o Modified SQLParser to only extract table names when requested to, because it
   was unable to parse function calls.

01/28/2005 - Alin Sinpalean
 o Added checks for timeout exceptions to JtdsStatement.executeSQLQuery() and
   executeSQL(); if a cursor creation fails because of a timeout, the exception
   is thrown back and a direct select is not attempted anymore.
 o commit() and rollback() now throw SQLException if called in auto-commit
   mode, per API documentation.
 o Added checks to setAutoCommit() and setTransactionIsolation() to no longer
   submit requests to the server if already in the correct mode.

01/27/2005 - Alin Sinpalean
 o Fixed bug in CharsetInfo, caused by getClassLoader() returning null when the
   class loader is the bootstrap classloader.

===============================================================================
01/25/2005 - jTDS 1.0 released
===============================================================================

Changes from jTDS 0.9.1
=======================

01/25/2005 - Alin Sinpalean
 o Updated the HTML content and incremented the version number in both the docs
   and the code.

01/24/2005 - Alin Sinpalean
 o Minor clean-up in tests and code.

01/24/2005 - Mike Hutchinson
 o Fixed bug [1107105] Sybase updateable cursor error (a null pointer exception