@@ -84,6 +84,7 @@ error.connection.nohost=The serverName property has not been set.
 error.connection.savenorollback=Savepoints cannot be rolled back in auto-commit mode.
 error.connection.savenoset=Savepoints cannot be set in auto-commit mode.
 error.connection.savenullname=Savepoint name cannot be null.
+error.connection.servertype=The value of the serverType property is invalid: {0}
 error.connection.sso=Single-Sign-On is only supported on Windows. Please specify a user name.
 error.connection.timeout=Login timed out.
 error.conproxy.noconn="Connection has been returned to pool and this reference is no longer valid.
